--- a/noticia2.html
+++ b/noticia2.html
@@ -17,6 +17,8 @@
       <h1>Neymar brilha e PSG vence clássico contra o Olympique de Marseille</h1>
       <p><strong>Paris, 20 de outubro de 2024</strong> — O Paris Saint-Germain (PSG) venceu o Olympique de Marseille por 3 a 1 em um emocionante clássico realizado no Parc des Princes. A estrela da noite foi Neymar, que marcou dois gols e foi o grande nome da partida, levando o PSG a mais uma vitória no campeonato francês.</p>
 
+      <img src="https://media.gettyimages.com/id/1469806911/pt/foto/marseille-france-kylian-mbappe-of-paris-saint-germain-celebrates-his-first-goal-during-the.jpg?s=612x612&w=0&k=20&c=I3CBq4sdBhqA-pq0LI8vYgrCWrluPFoteaKBwNKLsas=" alt="Flamengo e Palmeiras em campo" class="img-fluid my-4">
+
       <h5>Neymar domina o primeiro tempo</h5>
       <p>No primeiro tempo, o PSG começou pressionando, com Neymar liderando as investidas. Aos 22 minutos, ele abriu o placar com um chute preciso de fora da área, sem chances para o goleiro adversário. Pouco depois, aos 38 minutos, Neymar ampliou com uma cobrança de falta magistral, levantando a torcida parisiense. O camisa 10 mostrou estar em grande forma, recuperado de lesões e mais confiante a cada partida.</p>
       <p>"Me sinto muito bem, fisicamente e mentalmente. Estou feliz por ajudar a equipe e é sempre especial marcar em um clássico como esse", disse Neymar em entrevista após o jogo.</p>
@@ -37,7 +39,26 @@
       <p>Agora, o PSG volta suas atenções para a Liga dos Campeões, onde enfrentará o Bayern de Munique na próxima semana em um confronto decisivo da fase de grupos. A equipe parisiense espera manter o bom momento e garantir a classificação para a próxima fase da competição europeia.</p>
       <p>Enquanto isso, no campeonato francês, o Olympique de Marseille tentará se recuperar na próxima rodada, buscando uma vitória para continuar na briga por uma vaga nas competições europeias da próxima temporada.</p>
 
+      <iframe width="560" height="315" src="https://dai.ly/x8est56" title="Final do Campeonato Mundial de Vôlei - Brasil x Itália" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
+
+      <br>
+
       <a href="index.html" class="btn btn-primary">Voltar</a>
+
+      <br>
+      <br>
+      <br>
+
+      <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+           <p>&copy; 2024 Stacio Sports. Todos os direitos reservados.</p>
+           <ul class="list-inline">
+              <li class="list-inline-item"><a href="#" class="text-white">Facebook</a></li>
+              <li class="list-inline-item"><a href="#" class="text-white">Twitter</a></li>
+              <li class="list-inline-item"><a href="#" class="text-white">Instagram</a></li>
+           </ul>
+        </div>
+      </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
