--- a/noticia1.html
+++ b/noticia1.html
@@ -36,8 +36,8 @@
       <h1>Superclássico define os rumos do campeonato: Flamengo e Palmeiras se enfrentam em jogo decisivo</h1>
       <p><strong>Rio de Janeiro, 27 de setembro de 2024</strong> — O próximo domingo promete fortes emoções para os torcedores de Flamengo e Palmeiras!!! A partida, válida pela 35ª rodada do Brasileirão, pode ser decisiva para a definição do campeão da temporada 2024.</p>
 
-      <!-- Imagem relacionada ao Superclássico -->
-      <img src="https://www.gettyimages.com.br/search/2/image?family=creative%2Ceditorial&phrase=palmeiras%20vs%20flamengo" alt="Flamengo e Palmeiras em campo" class="img-fluid my-4">
+      
+      <img src="https://media.gettyimages.com/id/2149579676/pt/foto/sao-paulo-brazil-murilo-of-palmeiras-and-pedro-of-flamengo-fight-for-the-ball-during-a-match.jpg?s=612x612&w=0&k=20&c=Egqx5XBQf1bQgA81Xw2ui5BWCbNH6O8GrGujrOyvjg8=" alt="Flamengo e Palmeiras em campo" class="img-fluid my-4">
 
       <h5>Palmeiras busca consolidar liderança</h5>
       <p>Líder do campeonato com 68 pontos, o Palmeiras chega embalado após uma sequência de vitórias importantes. A equipe de Abel Ferreira tem como destaque a solidez defensiva, com apenas 23 gols sofridos até o momento, e o poder ofensivo de Endrick e Raphael Veiga, que juntos somam 30 gols no campeonato. A vitória no clássico pode consolidar ainda mais a liderança do time paulista, que já sonha com o título.</p>
@@ -48,15 +48,29 @@
       <h5>Expectativa de casa cheia e grandes emoções</h5>
       <p>A previsão é de casa cheia, com mais de 70 mil ingressos vendidos para o Maracanã. A atmosfera promete ser eletrizante, com as duas torcidas empurrando seus times para a vitória. Além da briga pelo título, o confronto coloca frente a frente os dois elencos mais valiosos do futebol brasileiro, com jogadores de renome internacional que podem decidir o jogo em um lance.</p>
 
-      <!-- Vídeo do Superclássico -->
-      <div class="video-container my-4">
-        <iframe src="https://www.youtube.com/embed/ID_DO_VIDEO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-
       <h5>Histórico de confrontos recentes</h5>
       <p>Nos últimos cinco jogos entre Flamengo e Palmeiras, o equilíbrio tem sido a marca registrada. Foram duas vitórias para cada lado e um empate, com jogos sempre disputados e muitas vezes decididos nos detalhes. Esse retrospecto só aumenta a expectativa para o duelo deste domingo, que pode ser um dos mais emocionantes da temporada.</p>
 
+      <iframe width="560" height="315" src="https://dai.ly/x8prr7m" title="Final do Campeonato Mundial de Vôlei - Brasil x Itália" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
+
+      <br>
+
       <a href="index.html" class="btn btn-primary">Voltar</a>
+
+      <br>
+      <br>
+      <br>
+
+      <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+           <p>&copy; 2024 Stacio Sports. Todos os direitos reservados.</p>
+           <ul class="list-inline">
+              <li class="list-inline-item"><a href="#" class="text-white">Facebook</a></li>
+              <li class="list-inline-item"><a href="#" class="text-white">Twitter</a></li>
+              <li class="list-inline-item"><a href="#" class="text-white">Instagram</a></li>
+           </ul>
+        </div>
+      </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
